[gd_scene load_steps=4 format=3 uid="uid://dlxce36bq5gp1"]

[ext_resource type="Script" path="res://scripts/gate.gd" id="1_oyb6r"]
[ext_resource type="Texture2D" uid="uid://882ajyq5akwp" path="res://graphics/keys.png" id="2_pniqb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3qsat"]
size = Vector2(16, 48)

[node name="Gate" type="Node2D"]
z_index = -1
texture_filter = 1
script = ExtResource("1_oyb6r")

[node name="ColorBars" type="Node2D" parent="."]

[node name="Polygon2D" type="Polygon2D" parent="ColorBars"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-8, -16)
polygon = PackedVector2Array(0, 0, 16, 0, 16, 6, 0, 6)

[node name="Polygon2D2" type="Polygon2D" parent="ColorBars"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-8, -10)
polygon = PackedVector2Array(0, 0, 16, 0, 16, 6, 0, 6)

[node name="Polygon2D3" type="Polygon2D" parent="ColorBars"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-8, -4)
polygon = PackedVector2Array(0, 0, 16, 0, 16, 6, 0, 6)

[node name="Polygon2D4" type="Polygon2D" parent="ColorBars"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-8, 2)
polygon = PackedVector2Array(0, 0, 16, 0, 16, 6, 0, 6)

[node name="Polygon2D5" type="Polygon2D" parent="ColorBars"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-8, 8)
polygon = PackedVector2Array(0, 0, 16, 0, 16, 6, 0, 6)

[node name="Polygon2D6" type="Polygon2D" parent="ColorBars"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-8, 14)
polygon = PackedVector2Array(0, 0, 16, 0, 16, 6, 0, 6)

[node name="Polygon2D7" type="Polygon2D" parent="ColorBars"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-8, 20)
polygon = PackedVector2Array(0, 0, 16, 0, 16, 6, 0, 6)

[node name="Polygon2D8" type="Polygon2D" parent="ColorBars"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-8, 26)
polygon = PackedVector2Array(0, 0, 16, 0, 16, 6, 0, 6)

[node name="KeySymbols" type="Node2D" parent="."]

[node name="Key" type="Sprite2D" parent="KeySymbols"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-16, 24)
texture = ExtResource("2_pniqb")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Key2" type="Sprite2D" parent="KeySymbols"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-16, 8)
texture = ExtResource("2_pniqb")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Key3" type="Sprite2D" parent="KeySymbols"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-16, -8)
texture = ExtResource("2_pniqb")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Key4" type="Sprite2D" parent="KeySymbols"]
modulate = Color(1, 1, 1, 0)
position = Vector2(-16, -24)
texture = ExtResource("2_pniqb")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Key5" type="Sprite2D" parent="KeySymbols"]
modulate = Color(1, 1, 1, 0)
position = Vector2(0, -24)
texture = ExtResource("2_pniqb")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Key6" type="Sprite2D" parent="KeySymbols"]
modulate = Color(1, 1, 1, 0)
position = Vector2(16, -24)
texture = ExtResource("2_pniqb")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Key7" type="Sprite2D" parent="KeySymbols"]
modulate = Color(1, 1, 1, 0)
position = Vector2(16, -8)
texture = ExtResource("2_pniqb")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Key8" type="Sprite2D" parent="KeySymbols"]
modulate = Color(1, 1, 1, 0)
position = Vector2(16, 8)
texture = ExtResource("2_pniqb")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Key9" type="Sprite2D" parent="KeySymbols"]
modulate = Color(1, 1, 1, 0)
position = Vector2(16, 24)
texture = ExtResource("2_pniqb")
region_enabled = true
region_rect = Rect2(0, 0, 16, 16)

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 8)
shape = SubResource("RectangleShape2D_3qsat")
disabled = true

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
